--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,49 @@
+* {
+  border: 1px solid tomato;
+  background-color: rgba(100, 100, 100, 0.3);
+  box-sizing: border-box;
+}
 .App {
-  text-align: center;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  background-color: antiquewhite;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.row {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  flex-grow: 1;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+}
+
+.App__Container {
+  height: 80vh;
+  width: 80vw;
+  flex-grow: 0;
+}
+
+.grow2 {
+  flex-grow: 2;
+}
+
+.text--white {
+  color: white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
