--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,24 @@
   flex-grow: 1;
 }
 
+.column button {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
 .column {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-grow: 1;
+}
+
+.column a {
+  display: block;
+  margin-bottom: 10px;
+  color: white;
+  text-decoration: none;
 }
 
 .bg--cover {
@@ -43,6 +55,29 @@
   border-radius: 20px;
   box-shadow: 0px 5px 40px rgb(0 0 0 / 0.3);
   background-color: rgb(34, 33, 33);
+}
+
+.baslik {
+  font-size: 2rem;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
+
+.date-input input[type="date"] {
+  color: #fff;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  font-size: 2rem;
+}
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
 }
 
 .grow2 {
